--- a/app/sections/90_contacts.html
+++ b/app/sections/90_contacts.html
@@ -1,4 +1,4 @@
-<section class="map section" data-anchor="map">
+<section class="map section" data-anchor="map" id="map">
 	<div class="map__map" id="map__map">
 	</div>
 	<footer class="footer">
@@ -50,4 +50,3 @@
 	</footer>
 </section>
 
-</div>
