--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -13,9 +13,37 @@
 			</p>
 		</div>
 	</div>
-
+</div>
+<div class="vert-slider">
+	<ul class="vert-slider__list">
+		<li class="vert-slider__item vert-slider__item--active">
+			<a href="#" class="vert-slider__link vert-slider__link--active"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+		<li class="vert-slider__item">
+			<a href="#" class="vert-slider__link"></a>
+		</li>
+	</ul>
 
 </div>
+
 <!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
 <script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
 <script type="text/javascript" src="./js/fullPage.js"></script>
