--- a/app/sections/95_nav-screen.html
+++ b/app/sections/95_nav-screen.html
@@ -1,79 +1,7 @@
-<div class="nav-screen">
-	<header class="header">
-		<a href="#" class="header__logo">
-			<img src="./img/hero/logo.png" alt="mr. burger logo" class="header__logo-img">
-		</a>
-		<div class="header__buttons">
+<!-- <div class="nav-screen">
 
-			<nav class="nav">
-				<ul class="nav__list">
-					<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-				</ul>
-			</nav>
-		</div>
-		<a href="#" class="btn">Заказать</a>
-		<a href="#" class="hamburger-menu-link">
-			<div class="hamburger-menu-link__bars"></div>
-		</a>
 
-		<div class="hamburger-menu " id="hamburger-menu">
-			<div class="hamburger-menu__items">
-				<nav class="nav nav_hamburger">
-					<ul class="nav__list" id="nav__list_hamburger">
-						<nav class="nav">
-							<ul class="nav__list">
-								<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-							</ul>
-						</nav>
-					</ul>
-				</nav>
-			</div>
-		</div>
-
-	</header>
-
-	<div class="vert-slider">
-		<ul class="vert-slider__list">
-			<li class="vert-slider__item vert-slider__item--active">
-				<a href="#" class="vert-slider__link vert-slider__link--active"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-			<li class="vert-slider__item">
-				<a href="#" class="vert-slider__link"></a>
-			</li>
-		</ul>
-
-	</div>
 	<a class="down-btn" href="#">
 		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
 	</a>
-</div>
+</div> -->
