--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,9 @@
 		</div>
 
 	</header>
+	<a class="down-btn" href="#">
+		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
+	</a>
 </section>
 <section class="we-best section" data-anchor="we-best">
 	<div class="container">
