--- a/app/sections/10_hero.html
+++ b/app/sections/10_hero.html
@@ -61,4 +61,7 @@
 		</div>
 
 	</header>
+	<a class="down-btn" href="#">
+		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
+	</a>
 </section>
