--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" href="./css/main.css">
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="libs/uppod-0.13.05.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -660,7 +661,18 @@
 
 
 </section>
+<section class="how-work section">
+	<div class="container">
 
+		<h2 class="title">как мы работаем</h2>
+		<!-- <div id="myplayer" class='how-work__video'></div> -->
+		<iframe src="https://www.youtube.com/embed/fFeV8WxIZLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+		 allowfullscreen class='how-work__video'></iframe>
+		</iframe>
+	</div>
+	<!-- <SCRIPT type=text/javascript>this.videoplayer=new Uppod( {m:"video",comment:"Название",uid:"myplayer", file:"https://youtu.be/HoXyw909Qu0" -->
+	} ); </script>
+</section>
 <section class="form-screen section" data-anchor="form">
 	<form action="post" class="form container" id="order-form">
 		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
@@ -852,7 +864,7 @@
 
 <!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
 <script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
-<script type="text/javascript" src="./js/fullPage.js"></script>
+<!-- <script type="text/javascript" src="./js/fullPage.js"></script> -->
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./libs/siema.min.js"></script>
