--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -46,7 +46,7 @@
 
 <!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
 <script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
-<script type="text/javascript" src="./js/fullPage.js"></script>
+<!-- <script type="text/javascript" src="./js/fullPage.js"></script> -->
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./libs/siema.min.js"></script>
