--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
 		<div class="maincontent" id="maincontent">
-<section class="hero section" data-anchor="hero">
+<section class="hero section" id="hero">
 
 	<div class="container">
 
@@ -82,7 +82,7 @@
 		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
 	</a>
 </section>
-<section class="we-best section" data-anchor="we-best">
+<section class="we-best section" id="we-best">
 	<div class="container">
 
 		<div class="we-best__title title title__color--black">Мы лучшие</div>
