--- a/app/sections/20_we-best.html
+++ b/app/sections/20_we-best.html
@@ -1,4 +1,4 @@
-<section class="we-best section" data-anchor="we-best">
+<section class="we-best section" id="we-best">
 	<div class="container">
 
 		<div class="we-best__title title title__color--black">Мы лучшие</div>
