--- a/app/sections/00_begin.html
+++ b/app/sections/00_begin.html
@@ -9,9 +9,9 @@
 
 	<link rel="stylesheet" href="./css/main.css">
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="libs/uppod-0.13.05.js" type="text/javascript"></script>
+
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="maincontent" id="maincontent">
+	<div class="wrapper ops">
+		<div class="maincontent ops__container" id="maincontent">
