--- a/app/sections/30_burgers.html
+++ b/app/sections/30_burgers.html
@@ -1,4 +1,4 @@
-<section class="burgers section" data-anchor="burgers">
+<section class="burgers section" id="burgers">
 	<div class="container burgers__container">
 
 
