--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -1,3 +1,4 @@
+</div>
 <div class="modal" id='modal'>
 	<div class="modal__container">
 		<div class="modal__top-row">
@@ -14,38 +15,44 @@
 		</div>
 	</div>
 </div>
-<div class="vert-slider">
-	<ul class="vert-slider__list">
-		<li class="vert-slider__item vert-slider__item--active">
-			<a href="#" class="vert-slider__link vert-slider__link--active"></a>
+<div class="ops-slider">
+	<ul class="ops-slider__list">
+		<li class="ops-slider__item is-active">
+			<a href="#" class="ops-slider__link "></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
-		<li class="vert-slider__item">
-			<a href="#" class="vert-slider__link"></a>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
+		</li>
+		<li class="ops-slider__item">
+			<a href="#" class="ops-slider__link"></a>
 		</li>
 	</ul>
 
 </div>
-
+<a class="down-btn" href="#">
+	<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
+</a>
+</div>
 <!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
-<script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
+<!-- <script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script> -->
 <!-- <script type="text/javascript" src="./js/fullPage.js"></script> -->
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
