--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -56,6 +56,7 @@
 <!-- <script type="text/javascript" src="./js/fullPage.js"></script> -->
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="./libs/siema.min.js"></script>
 <script src="./js/app.min.js"></script>
 
