--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
 	<link rel="stylesheet" href="./css/main.css">
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
+	<script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
 
 </head>
 
@@ -666,9 +668,19 @@
 		<!-- <iframe src="https://www.youtube.com/embed/fFeV8WxIZLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 		 allowfullscreen class='how-work__video'></iframe>
 		</iframe> -->
+		<video id="my-player" class="video-js" controls preload="auto" poster="//vjs.zencdn.net/v/oceans.png" data-setup='{}'>
+			<source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+			</source> -->
+			<source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm">
+			</source>
+			<source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg">
+			</source>
+		</video>
+
+
 	</div>
 
-	} ); </script>
+
 </section>
 <section class="form-screen section" data-anchor="form">
 	<form action="post" class="form container" id="order-form">
@@ -872,5 +884,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="./libs/siema.min.js"></script>
 <script src="./js/app.min.js"></script>
+<script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
 
 </html>
