--- a/app/sections/00_begin.html
+++ b/app/sections/00_begin.html
@@ -9,6 +9,8 @@
 
 	<link rel="stylesheet" href="./css/main.css">
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
+	<script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
 
 </head>
 
