--- a/app/sections/70_how_work.html
+++ b/app/sections/70_how_work.html
@@ -5,7 +5,17 @@
 		<!-- <iframe src="https://www.youtube.com/embed/fFeV8WxIZLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 		 allowfullscreen class='how-work__video'></iframe>
 		</iframe> -->
+		<video id="my-player" class="video-js" controls preload="auto" poster="//vjs.zencdn.net/v/oceans.png" data-setup='{}'>
+			<source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+			</source> -->
+			<source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm">
+			</source>
+			<source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg">
+			</source>
+		</video>
+
+
 	</div>
 
-	} ); </script>
+
 </section>
