--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -59,5 +59,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" type="text/javascript"></script>
 <script src="./libs/siema.min.js"></script>
 <script src="./js/app.min.js"></script>
+<script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
 
 </html>
