--- a/app/index.html
+++ b/app/index.html
@@ -59,25 +59,7 @@
 			<div class="hamburger-menu-link__bars"></div>
 		</a>
 
-		<div class="hamburger-menu " id="hamburger-menu">
-			<div class="hamburger-menu__items">
-				<nav class="nav nav_hamburger">
-					<ul class="nav__list" id="nav__list_hamburger">
-						<nav class="nav">
-							<ul class="nav__list">
-								<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
-								<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-							</ul>
-						</nav>
-					</ul>
-				</nav>
-			</div>
-		</div>
+
 
 	</header>
 
@@ -871,6 +853,25 @@
 		</li>
 	</ul>
 
+</div>
+<div class="hamburger-menu" id="hamburger-menu">
+	<div class="hamburger-menu__items">
+		<nav class="nav nav_hamburger">
+			<ul class="nav__list" id="nav__list_hamburger">
+				<nav class="nav">
+					<ul class="nav__list">
+						<li class="nav__item"><a href="#hero" class="nav__link">О нас</a></li>
+						<li class="nav__item"><a href="#burgers" class="nav__link">Бургуры</a></li>
+						<li class="nav__item"><a href="#team" class="nav__link">Команда</a></li>
+						<li class="nav__item"><a href="#menu" class="nav__link">Меню</a></li>
+						<li class="nav__item"><a href="#reviews" class="nav__link">Отзывы</a></li>
+						<li class="nav__item"><a href="#how-work" class="nav__link">Как мы рыботаем</a></li>
+						<li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
+					</ul>
+				</nav>
+			</ul>
+		</nav>
+	</div>
 </div>
 <a class="down-btn" href="#">
 	<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
