--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -47,6 +47,9 @@
 	</ul>
 
 </div>
+<a href="#" class="hamburger-menu-link">
+	<div class="hamburger-menu-link__bars"></div>
+</a>
 <div class="hamburger-menu" id="hamburger-menu">
 	<div class="hamburger-menu__items">
 		<nav class="nav nav_hamburger">
